# ChangeLog for perl-core/Test-Harness
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/Test-Harness/ChangeLog,v 1.42 2009/03/13 21:51:19 tove Exp $

  13 Mar 2009; Torsten Veller <tove@gentoo.org> -Test-Harness-2.56.ebuild,
  -Test-Harness-3.14.ebuild:
  Cleanup

*Test-Harness-3.16 (20 Feb 2009)

  20 Feb 2009; Torsten Veller <tove@gentoo.org> -Test-Harness-3.15.ebuild,
  +Test-Harness-3.16.ebuild:
  Version bump. Cleanup

*Test-Harness-3.15 (18 Feb 2009)

  18 Feb 2009; Torsten Veller <tove@gentoo.org> +Test-Harness-3.15.ebuild:
  Version bump

  30 Jan 2009; Torsten Veller <tove@gentoo.org> metadata.xml,
  -Test-Harness-2.62.ebuild, -Test-Harness-3.12.ebuild,
  -Test-Harness-3.13.ebuild:
  Cleanup

*Test-Harness-3.14 (15 Sep 2008)

  15 Sep 2008; Torsten Veller <tove@gentoo.org> +Test-Harness-3.14.ebuild:
  Version bump

*Test-Harness-3.13 (28 Jul 2008)

  28 Jul 2008; Torsten Veller <tove@gentoo.org> +Test-Harness-3.13.ebuild:
  Version bump

  15 Jul 2008; Raúl Porcel <armin76@gentoo.org> Test-Harness-3.10.ebuild:
  alpha/ia64/sparc/x86 stable

*Test-Harness-3.12 (04 Jul 2008)

  04 Jul 2008; Torsten Veller <tove@gentoo.org> +Test-Harness-3.12.ebuild:
  Version bump (#228057)

  10 May 2008; Torsten Veller <tove@gentoo.org> Test-Harness-3.10.ebuild:
  Using Makefile.PL again.

*Test-Harness-3.10 (09 May 2008)

  09 May 2008; Torsten Veller <tove@gentoo.org> +Test-Harness-3.10.ebuild:
  #219484 - Version bump

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> Test-Harness-2.64.ebuild:
  Stable for HPPA too.

  11 May 2007; Joshua Kinard <kumba@gentoo.org> Test-Harness-2.64.ebuild:
  Stable on mips.

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Test-Harness-2.64.ebuild:
  ppc stable

  15 Apr 2007; Markus Rothe <corsair@gentoo.org> Test-Harness-2.64.ebuild:
  Stable on ppc64

  03 Mar 2007; Andrej Kacian <ticho@gentoo.org> Test-Harness-2.64.ebuild:
  Stable on x86, bug #169153.
