@@ -1,10 +1,10 @@
 DIST Test-Harness-2.64.tar.gz 71157 RMD160 2ce9ed32114b545344ca517f3ba1dfeb0293d82d SHA1 65a5442500926f9ef00f9aadbacc2e30377074d8 SHA256 bdabc7994ba204a6d771482e708646aca6f2ea32c3294903460a1cbe961b956f
 DIST Test-Harness-3.10.tar.gz 177033 RMD160 ec2ab7efbc26e62df7a8428e3cb8c057705b2ecf SHA1 cd1e7d1f929323d2d8ff01a990d1ef9bf151bc0e SHA256 908bdca2041f81f897f1d9a454d52de8431c2dda06780be5da41defbfd09a2e1
-DIST Test-Harness-3.14.tar.gz 199893 RMD160 6c36428ba7cb01c5cb9e2f5906c5e93598073371 SHA1 e454fd3df5cf55668958b92dd5bce2e10aa3913a SHA256 0cd7e6c5f0976631cfd75428c2dfd79ebc57eeff5969784ac71c31509be57afc
 DIST Test-Harness-3.16.tar.gz 208216 RMD160 309e67301fdc785876bc17b37fdb33dcd7a2a4b0 SHA1 ba822655a5aecb5c259c8bb949b009161ed27731 SHA256 f9468bda30b130f98c5bc044965c5366d9ba583f492d8aee851beb29a9ee48ae
+DIST Test-Harness-3.17.tar.gz 210311 RMD160 d654f2be5beb17dcea50f2d99963a7350d29d368 SHA1 cc4572113f553fbc55a5a5a1e791dcde4433cc45 SHA256 193a15e251ebb81e0e76d637c4baeee00f1d6445ff1f9b087c0859657a076948
 EBUILD Test-Harness-2.64.ebuild 685 RMD160 f1953bd10d6dcf01cbcf45a7c43696b6087a1ddf SHA1 e7f1a58ce71580ea69c604d7bf65eeaac330b4aa SHA256 cc87d4925a5b824e276739ae4c95310863b4cc76657ba412719a3fbbbc3573fa
 EBUILD Test-Harness-3.10.ebuild 619 RMD160 fd21534903de852a234d107b4f053ca833e80315 SHA1 10d32c1cc28a6669bb3329222b3291c1fce98b8d SHA256 a362e10409a0e70cc8ec983000dae3f3c2bdd789e220072ec24f98c6631f2f39
-EBUILD Test-Harness-3.14.ebuild 639 RMD160 cae12286040b60db04eaaff46193a7d724a444c7 SHA1 49e79be4bc45a96d9477a972da892c96161f0a82 SHA256 dc10e950f115b145de9a8e5c261c7269cbea5876308f60769c0f12f26b16f238
 EBUILD Test-Harness-3.16.ebuild 652 RMD160 d31406d476daf19f29d7c83b67af2341dd1c46af SHA1 4d1491165f0dd4b967b8da063a0c130ed0be034a SHA256 e40d9cb67f49357c25cde4686d35ed965e578c175edf06cbb644227ee97385e4
-MISC ChangeLog 9604 RMD160 ab5470202635a77a885f4c7769275134151ca16c SHA1 6736a2a25c3df26e799d84a71640db695086dc7e SHA256 0226c9c2c8421842a2de807578bf963bc46e190769eb6bb5823c028da16c2c0c
+EBUILD Test-Harness-3.17.ebuild 620 RMD160 967d292805adf31cab5dd0b9ae2e3cefdef79539 SHA1 d5bc420257228d6ee0e06773d90c708ebbac0876 SHA256 4201d38f65f01fd56fe951ce9a6a0aa7975e49e3f381ed7a22d18be36e132567
+MISC ChangeLog 9729 RMD160 0375f50e3bf2b60c3cfd0e9cc059c9944f1d4a20 SHA1 704cda68156a04047c00d0fffda5a4f2352d6401 SHA256 0599de2e943348c5e8202640d7c64f9c8aba9379427c14a491dbc26f41820ef4
 MISC metadata.xml 158 RMD160 03e4d8164c58bc61660cbaf489d4e3652de0feb7 SHA1 9a84117c6fb70288426e20c84deaf16f4381a549 SHA256 1fef4c0af5f71b777110f54d9dfbd27d6c85c750fca007f4a2fb38345ebbb710
