@@ -1,6 +1,11 @@
 # ChangeLog for perl-core/Test-Harness
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Test-Harness/ChangeLog,v 1.42 2009/03/13 21:51:19 tove Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Test-Harness/ChangeLog,v 1.43 2009/05/06 08:16:13 tove Exp $
+
+*Test-Harness-3.17 (06 May 2009)
+
+  06 May 2009; Torsten Veller <tove@gentoo.org> +Test-Harness-3.17.ebuild:
+  Version bump
 
   13 Mar 2009; Torsten Veller <tove@gentoo.org> -Test-Harness-2.56.ebuild,
   -Test-Harness-3.14.ebuild:
